# worldpossible-scriptlauncher

./: meson.build  org.worldpossible.ScriptLauncher.yml  org.worldpossible.Updutil.yml
data/: meson.build  org.worldpossible.ScriptLauncher.appdata.xml.in  org.worldpossible.ScriptLauncher.desktop.in  org.worldpossible.Updutil.appdata.xml.in  org.worldpossible.Updutil.desktop.in  org.worldpossible.scriptlauncher.gschema.xml  org.worldpossible.updutil.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  scriptlauncherlogger.py  updutillogger.py  window.py  window.ui  worldpossible-scriptlauncher.in  worldpossible-updutil.in  worldpossible_scriptlauncher.gresource.xml  worldpossible_updutil.gresource.xml
